[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-utils-py"
version = "0.1.0"
description = "Opinionated Kubernetes resource helpers for Python automation."
readme = "README.md"
requires-python = ">=3.14,<4.0"
keywords = ["kubernetes", "python", "automation"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "kubernetes>=28.1.0",
]

[tool.setuptools.packages.find]
include = ["k8s_utils*"]

[dependency-groups]
dev = [
    "pre-commit>=2.21.0",
    "prospector>=1.8.3",
    "pylint>=2.13.9",
    "pytest>=7.4.4",
    "ruff>=0.15.5",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "k8s: mark test as a Kubernetes integration test (requires --k8s flag)",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pylint.main]
source-roots = ["."]
ignore-paths = [
    "^build/.*",
    "^venv/.*",
    "^\\.venv/.*",
]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-positional-arguments",
    "logging-fstring-interpolation",
    "inconsistent-return-statements",
    "too-few-public-methods",
]

[tool.mypy]
python_version = "3.14"
files = ["k8s_utils"]
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
